# n8n-copilot-shim

./: .env.example  .gitignore  .testrc  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  DEMO_STATUS_CANCEL.md  EXAMPLE_WORKFLOW.json  FILES_DELIVERED.md  GEMINI_QUICK_REFERENCE.md  INTEGRATION_GUIDE.md  OPENSOURCE_SETUP.md  README.md  SECURITY.md  SKILL_SUBAGENTS.md  SUBAGENT_DELEGATION.md  TELEGRAM_CONNECTOR.md  TELEGRAM_QUICK_START.md  TELEGRAM_SETUP_SUMMARY.txt  TESTING.md  agent_manager.py  agents.example.json  opencode.example.json  pyproject.toml  run_tests.sh  setup-opensource.sh  start-webui.sh  stop-webui.sh  telegram_config.example.json  telegram_connector.py  test-webui.sh  test_delegation.py  test_with_runtimes.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
tests/: README.md  __init__.py  test_agent_manager.py
webui/: ATTRIBUTION.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/public/: manifest.webmanifest  sw.js
webui/server/: agent-proxy.ts  proxy.ts
webui/src/: App.tsx  index.css  index.tsx
webui/src/api/: client.ts  sse.ts  types.ts
webui/src/components/: ChatView.tsx  MessageInput.tsx  MessageItem.tsx  SessionList.tsx  Settings.tsx
webui/src/components/common/: Markdown.tsx
webui/src/stores/: config.ts  session.ts
